--- a/styles.scss
+++ b/styles.scss
@@ -38,6 +38,8 @@ md-input-container .md-input {
 }
 
 md-dialog {
+    padding: 15px;
+    
     md-input-container .md-input,
     .md-actions .md-button {
         color: #333;
