--- a/styles.scss
+++ b/styles.scss
@@ -7,6 +7,7 @@ body {
 }
 
 md-content,
+.md-subheader.md-default-theme,
 .md-subheader {
     background-color: transparent;
     color: #fff;
@@ -57,6 +58,10 @@ md-menu-item {
     height: 35px;
 }
 
+md-list.scroll {
+    overflow: auto;
+}
+
 .md-select-menu-container {
     background-color: #fff;
     md-option {
@@ -91,12 +96,36 @@ md-menu-item {
     top: -12px;
 }
 
+.list-filter {
+    padding-bottom: 0;
+}
+
+.count {
+    padding: 5px;
+    background-color: tomato;
+    border-radius: 50%;
+    display: inline-block;
+    width: 16px;
+    text-align: center;
+}
+
 .contacts {
     background-color: #C62828;
 
     .contact-list {
+        md-list-item {
+            margin-bottom: 20px;
+        }
+        .md-avatar {
+            background-color: #fff;
+            font-weight: bold;
+            color: #C62828;
+            text-align: center;
+            line-height: 40px;
+        }
+
         h3, h4, p {
-            margin: 0;
+            margin: 0 0 4px 0;
         }
     }
 }
