--- a/styles.scss
+++ b/styles.scss
@@ -1,166 +1,4 @@
-@import "./node_modules/angular-material/angular-material.scss";
-
-html,
-body {
-    color: #fff;
-    background: #B71C1C;
-}
-
-md-content,
-.md-subheader.md-default-theme,
-.md-subheader {
-    background-color: transparent;
-    color: #fff;
-}
-
-md-list md-list-item button.md-button:not([disabled]):hover {
-    background-color: #F57F17;
-}
-
-md-checkbox .md-icon {
-    border-color: #fff;
-}
-
-a.md-button.md-accent.md-raised,
-a.md-button.md-accent.md-fab,
-.md-button.md-accent.md-raised,
-.md-button.md-accent.md-fab {
-    color: #fff;
-}
-
-.md-fab ng-md-icon,
-md-menu-item ng-md-icon {
-    position: relative;
-    top: 4px;
-}
-
-md-input-container .md-input {
-    color: #fff;
-}
-
-md-dialog {
-    padding: 15px;
-    color: rgba(0,0,0,0.87);
-
-    .md-input,
-    .md-actions .md-button,
-    md-select-value {
-        color: rgba(0,0,0,0.87);
-    }
-}
-
-md-menu-content {
-    padding: 0;
-}
-
-md-menu-item {
-    min-height: 35px;
-    height: 35px;
-}
-
-md-list.scroll {
-    overflow: auto;
-}
-
-.nav-menu {
-    .md-button ng-md-icon {
-        margin-right: 5px;
-    }
-}
-
-.md-select-menu-container {
-    background-color: #fff;
-    md-option {
-        color: #333;
-    }
-}
-
-.md-button {
-    ng-md-icon {
-        position: relative;
-        top: 3px;
-    }
-}
-
-.incoming-toggle {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-}
-
-.edit-button {
-    min-height: 0;
-    min-width: 0;
-    margin: 0;
-    padding: 0;
-    line-height: 1.2em;
-}
-
-.add-button {
-    float: right;
-    position: relative;
-    top: -12px;
-}
-
-.list-filter {
-    padding-bottom: 0;
-}
-
-.count {
-    padding: 5px;
-    background-color: tomato;
-    border-radius: 50%;
-    display: inline-block;
-    width: 16px;
-    text-align: center;
-}
-
-.contacts {
-    background-color: #C62828;
-
-    .contact-list {
-        md-list-item {
-            margin-bottom: 20px;
-        }
-        .md-avatar {
-            background-color: #fff;
-            font-weight: bold;
-            color: #C62828;
-            text-align: center;
-            line-height: 40px;
-        }
-
-        h3, h4, p {
-            margin: 0 0 4px 0;
-        }
-    }
-}
-
-.scripts {
-    background-color: #D32F2F;
-
-    h4 {
-        margin: 0;
-    }
-
-    p {
-        margin-top: 0;
-        line-height: 1.2em;
-    }
-}
-
-.outgoing {
-    background-color: #E53935;
-
-    .md-button {
-        float: right;
-    }
-}
-
-.md-sidenav-right {
-    img {
-        max-width: 100%;
-        height: auto;
-        display: block;
-    }
-}
+@import "~angular-material/angular-material";
+@import "Common/common";
+@import "Texter/texter";
+@import "Messages/messages";
