--- a/Texter/texter.scss
+++ b/Texter/texter.scss
@@ -65,11 +65,29 @@
     }
 }
 
-.outgoing {
+.texts {
     background-color: #E53935;
 
     .md-button {
         float: right;
+    }
+
+    md-input-container {
+        padding-bottom: 0;
+    }
+
+    .incoming {
+        .message {
+            font-size: 14px;
+            border-radius: 10px;
+            padding: 10px;
+            margin: 10px;
+            box-shadow: 0 0 10px #B71C1C;
+
+            .name {
+                font-size: 12px;
+            }
+        }
     }
 }
 
