made messages font huge

--- a/Messages/messages.scss
+++ b/Messages/messages.scss
@@ -40,8 +40,8 @@
         }
 
         .text {
-            font-size: 44px;
-            line-height: 52px;
+            font-size:72px;
+            line-height: 1.2em;
         }
     }
 
